# ring_span

./: CMakeLists.txt  LICENSE  README.md
include/: ring_span.h
src/: CMakeLists.txt  test.cpp
